[tool.poetry]
name = "tap-auth0"
version = "0.5.0"
description = "`tap-auth0` is a Singer tap for Auth0, built with the Meltano SDK for Singer Taps."
authors = ["Reuben Frankel", "Daniel Walker"]
keywords = [
    "ELT",
    "Auth0",
]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
singer-sdk = "^0.36.0"
ndjson = "^0.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
tox = "^4.14.0"
flake8 = "^5.0.4"
black = "^24.2.0"
pydocstyle = "^6.1.1"
mypy = "^1.8"
types-requests = "^2.26.1"
isort = {extras = ["colors"], version = "^5.13.2"}
responses = "0.25.0"
pre-commit = "^3.5.0"
autoflake = "^1.4"

[tool.black]
include = "tap_auth0"
extend-exclude = "tests"
color = "true"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_auth0"
extend_skip = "tests"
color_output = "true"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-auth0 = 'tap_auth0.tap:TapAuth0.cli'
