[tool.poetry]
name = "tap-auth0"
version = "0.5.0"
description = "`tap-auth0` is a Singer tap for Auth0, built with the Meltano SDK for Singer Taps."
authors = [
    "Reuben Frankel <rfrankel@matatika.com>",
    "Daniel Walker <dwalker@matatika.com>",
]
keywords = [
    "ELT",
    "Auth0",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "AGPL-3.0-only"
packages = [
    { include = "tap_auth0" },
]

[tool.poetry.dependencies]
python = "^3.8"
importlib-resources = { version = "==6.4.*", python = "<3.9" }
singer-sdk = "^0.42.1"
fs-s3fs = { version = "^1.1.1", optional = true }
requests = "^2.32.3"
ndjson = "^0.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
singer-sdk = { version="^0.42.1", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true

[tool.ruff]
src = ["tap_auth0"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "ANN001",  # missing-type-function-argument
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "ANN201",  # missing-return-type-undocumented-public-function
    "ANN202",  # missing-return-type-private-function
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tap_auth0/types/**/*" = [
    "D101",   # undocumented-public-class
    "N805",   # invalid-first-argument-name-for-method
]

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_auth0"]

[build-system]
requires = ["poetry-core==1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-auth0 = 'tap_auth0.tap:TapAuth0.cli'
